# trading_plus

./: .env.example  CLAUDE.md  KIMI.md  PLAN.md  README.md  pyproject.toml  基金交易系统_最终方案_修订版.md
adapters/: __init__.py  base.py  eastmoney.py
ai/: __init__.py  analyzer.py  arbitrator.py  persistence.py  schema.py
ai/prompts/: fund_analysis_v1.md
backtest/: __init__.py  engine.py  portfolio.py
bot/: __init__.py  main.py
core/: __init__.py  alerts.py  events.py  types.py
db/: schema.sql
jobs/: __init__.py  scheduler.py
ops/: daily_report_20260128.md  daily_summary_2026-01-28.md  sync_log.md
scripts/: verify_skeleton.py
tests/: test_ai_analyzer.py  test_ai_schema.py  test_backtest_engine.py  test_core.py
web_admin/: __init__.py  app.py
